# oh-mini

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-14-phase10_5-oh-bridge.md  2026-05-14-phase9c-smart-default-provider.md
docs/superpowers/specs/: 2026-05-14-phase10_5-oh-bridge-design.md  2026-05-14-phase9c-smart-default-provider-design.md
src/oh_mini/: __init__.py  __main__.py  bridge.py  cli.py  config.py  config_cli.py  output.py  permission.py  prompts.py  repl.py  runtime.py
src/oh_mini/auth/: __init__.py  cli.py  resolver.py  storage.py
src/oh_mini/tools/: __init__.py  _safety.py  agent.py  bash.py  file_edit.py  file_read.py  file_write.py  glob.py  grep.py  notebook_edit.py  todo_write.py  web_fetch.py
tests/integration/: test_auth_cli.py  test_bridge_subprocess.py  test_cli_one_shot.py  test_cli_provider_catalog.py  test_cli_resume.py  test_config_cli.py  test_repl_interactive.py  test_smart_default.py
tests/unit/: test_bridge_module.py  test_config.py  test_config_cli.py  test_output.py  test_permission.py  test_prompts.py  test_runtime_factory.py
tests/unit/auth/: test_auth_cli_nudge.py  test_file_backend.py  test_keyring_backend.py  test_resolver.py
tests/unit/tools/: test_agent.py  test_bash.py  test_file_edit.py  test_file_read.py  test_file_write.py  test_glob.py  test_grep.py  test_notebook_edit.py  test_safety.py  test_todo_write.py  test_web_fetch.py
