[project]
name = "oh-mini"
version = "0.2.0"
description = "Coding-agent CLI demo built on meta-harney runtime."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "oh-mini contributors" },
]
dependencies = [
    "meta-harney @ git+https://github.com/bailaohe/meta-harney.git@v0.0.8",
    "anthropic>=0.40",
    "openai>=1.50",
    "httpx>=0.27",
    "nbformat>=5.10",
    "prompt_toolkit>=3.0",
    "rich>=13.0",
    "keyring>=24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.scripts]
oh = "oh_mini.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/oh_mini"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"

[tool.mypy]
strict = true
python_version = "3.10"
mypy_path = "src"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false
disallow_untyped_defs = false
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = "meta_harney.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "nbformat.*"
ignore_missing_imports = true
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = "keyring.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
